--- a/estilos.css
+++ b/estilos.css
@@ -14,7 +14,7 @@ body {
 .hero {
   position: relative;
   height: 60vh;
-  background: url('hero.jpeg') no-repeat center center/cover;
+  background: url('/img/hero.jpeg') no-repeat center center/cover;
   display: flex;
   align-items: center;
   justify-content: center;
